@startuml
class com.payMyBuddy.app.model.Bank {
- Long id
- String name
- String address
- List<Transaction> emitterBankListOperation
- List<Transaction> receiverBankListOperation
- double balance
- User user
+ String getCode()
}
class com.payMyBuddy.app.model.User {
- Long id
- String firstName
- String lastName
- String username
- String email
- String password
- String createdAt
- boolean enabled
- List<String> roles
- VerificationToken verificationToken
- double balance
- Bank bank
- List<Transaction> emitterUserListOperation
- List<Transaction> receiverUserListOperation
- List<Contact> userListContact
- List<Contact> contactListContact
+ Collection<? extends GrantedAuthority> getAuthorities()
+ boolean isAccountNonExpired()
+ boolean isAccountNonLocked()
+ boolean isCredentialsNonExpired()
+ boolean isEnabled()
+ boolean equals(Object)
+ int hashCode()
}
class com.payMyBuddy.app.model.VerificationToken {
- {static} int EXPIRATION
- Long id
- String token
- User user
- Date expiryDate
- Date calculateExpiryDate()
+ boolean equals(Object)
+ int hashCode()
}
class com.payMyBuddy.app.model.Contact {
- User user
- User contact
}
class com.payMyBuddy.app.model.Contact$ContactId {
- Long user
- Long contact
}
class com.payMyBuddy.app.model.Transaction {
- Long id
- User emitterUserId
- User receiverUserId
- Bank receiverBankId
- Bank emitterBankId
- LocalDateTime at
- String description
- double amount
}

com.payMyBuddy.app.model.User --* com.payMyBuddy.app.model.Transaction

com.payMyBuddy.app.model.Bank -- com.payMyBuddy.app.model.User
com.payMyBuddy.app.model.User --* com.payMyBuddy.app.model.Contact


com.payMyBuddy.app.util.MoneyHolder <|.. com.payMyBuddy.app.model.Bank
java.io.Serializable <|.. com.payMyBuddy.app.model.User
org.springframework.security.core.userdetails.UserDetails <|.. com.payMyBuddy.app.model.User
java.io.Serializable <|.. com.payMyBuddy.app.model.VerificationToken
com.payMyBuddy.app.model.Contact +.. com.payMyBuddy.app.model.Contact$ContactId
com.payMyBuddy.app.model.Serializable <|.. com.payMyBuddy.app.model.Contact$ContactId
@enduml